Bug 703164 - PCL to bmpmono gets image wrong on AIX, OK on Windows, linux
Summary: PCL to bmpmono gets image wrong on AIX, OK on Windows, linux
Status: NOTIFIED FIXED
Alias: None
Product: GhostPCL
Classification: Unclassified
Component: Graphics Library (show other bugs)
Version: master
Hardware: Other AIX
: P1 normal
Assignee: Michael Vrhel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-19 15:47 UTC by Ray Johnston
Modified: 2020-11-20 23:10 UTC (History)
0 users

See Also:
Customer: 470
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ray Johnston 2020-11-19 15:47:41 UTC
Created attachment 20213 [details]
IE60BRJ2.BIN.pcl

Customer reports that rendering to bmpmono produces bad output, but color
output seems OK.

Command line:
pcl6 -sDEVICE=bmpmono -r600 -o IE60BRJ2.BIN%i.bmp IE60BRJ2.BIN.pcl
Comment 1 Ray Johnston 2020-11-19 15:54:45 UTC
Since this is peculiar to AIX, giving it to Chris
Comment 2 Chris Liddell (chrisl) 2020-11-19 17:06:13 UTC
It's not AIX specific, but it is big-endian specific, it was introduced with:
https://git.ghostscript.com/?p=ghostpdl.git;a=commit;h=8c432810d36

more specifically, it comes from:

https://git.ghostscript.com/?p=ghostpdl.git;a=commitdiff;h=e4f2d720ced

on the page_group branch.

This is a "regression" (at least from a user/customer perspective), so I'm tentatively making it a P1.